--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,17 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Retireup Sample API App",
+  "name": "Retireup Sample API App",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "icon_t118.svg",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "icon_t118.svg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "icon_t118.svg",
       "sizes": "512x512"
     }
   ],
