--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-API_ACCESS_TOKEN_URL="https://elite.retireup.com/doc/swagger/token"
+REACT_APP_API_ACCESS_TOKEN_URL="https://elite.retireup.com/doc/swagger/token"
+REACT_APP_API_URL="https://elite.retireup.com"
