--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-REACT_APP_API_SUB="api_app_user"
+SERVER_PORT=5000 # Server port
+PORT=5001 # React app port
+API_URL="http://pro-dev.retireup.com:3000"
+API_KEY=""
+API_SECRET=""
+API_SUB="api_app_user"
