--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,6 @@
-REACT_APP_API_ACCESS_TOKEN_URL="https://elite.retireup.com/doc/swagger/token"
-REACT_APP_API_URL="https://elite.retireup.com"
+SERVER_PORT=5000 # Server port
+PORT=5001 # React app port
+API_URL="https://elite.retireup.com"
+API_KEY=""
+API_SECRET=""
+API_SUB="api_app_user"
