--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 SERVER_PORT=5000 # Server port
 PORT=5001 # React app port
-API_URL="https://elite.retireup.com"
+API_URL=""
 API_KEY=""
 API_SECRET=""
 API_SUB="api_app_user"
