--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-SERVER_PORT=5000 # Server port
-PORT=5001 # React app port
+# Express app
+SERVER_PORT=5000
+# React app
+PORT=5001
 API_URL=""
 API_KEY=""
 API_SECRET=""
