--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "d3-array": "^2.12.0",
+    "d3-ease": "^2.0.0",
+    "d3-scale": "^3.2.3",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.1.0",
+    "d3-transition": "^2.0.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "framer-motion": "^4.0.0",
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
@@ -19,6 +27,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "resize-observer-polyfill": "^1.5.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
