Support creating access token for demo app

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,9 @@
 SERVER_PORT=5001
 # React app
 PORT=5000
-API_URL=""
+API_URL="https://api.retireup.com"
+API_SUB="api_app_user"
+
+# DO NOT COMMIT THE FOLLOWING
 API_KEY=""
 API_SECRET=""
-API_SUB="api_app_user"
