--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
-    "bootstrap": "^4.6.2",
     "d3-array": "^2.12.1",
     "d3-ease": "^2.0.0",
     "d3-scale": "^4.0.2",
@@ -22,19 +18,11 @@
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.6",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^6.15.8",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "run-p server start"
@@ -42,8 +30,7 @@
   "proxy": "http://localhost:8001",
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
