--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "d3-array": "^2.12.1",
     "d3-ease": "^2.0.0",
     "d3-scale": "^4.0.2",
@@ -16,8 +18,13 @@
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
+    "react-hook-form": "^7.43.3",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.6",
+    "styled-components": "^5.3.8",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
@@ -44,5 +51,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.3"
   }
 }
