--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,15 +3,15 @@
   "name": "Retireup Sample API App",
   "icons": [
     {
-      "src": "icon_t118.svg",
-      "sizes": "64x64 32x32 24x24 16x16"
+      "src": "IcIcon.svg",
+      "sizes": "16x16"
     },
     {
-      "src": "icon_t118.svg",
+      "src": "IcIcon.svg",
       "sizes": "192x192"
     },
     {
-      "src": "icon_t118.svg",
+      "src": "IcIcon.svg",
       "sizes": "512x512"
     }
   ],
