--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.31",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
     "styled-components": "^5.3.8",
+    "svgo": "^3.0.4",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
@@ -59,5 +61,9 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3"
+  },
+  "overrides": {
+    "postcss": "$postcss",
+    "svgo": "$svgo"
   }
 }
