--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
+    "serialize-javascript": "^6.0.2",
     "styled-components": "^5.3.11",
     "svgo": "^3.0.4",
     "web-vitals": "^3.3.2"
@@ -65,6 +66,7 @@
   "overrides": {
     "axios": "$axios",
     "postcss": "$postcss",
+    "serialize-javascript": "$serialize-javascript",
     "svgo": "$svgo"
   }
 }
