--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "braces": "^3.0.3",
     "classnames": "^2.3.2",
     "d3-array": "^3.2.4",
     "d3-ease": "^3.0.1",
@@ -18,17 +19,18 @@
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "micromatch": "^4.0.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.32",
-    "react-hook-form": "^7.49.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
     "serialize-javascript": "^6.0.2",
     "styled-components": "^5.3.11",
-    "svgo": "^3.0.5",
-    "web-vitals": "^3.3.2"
+    "svgo": "^3.2.0",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,6 +67,8 @@
   },
   "overrides": {
     "axios": "$axios",
+    "braces": "$braces",
+    "micromatch": "$micromatch",
     "postcss": "$postcss",
     "serialize-javascript": "$serialize-javascript",
     "svgo": "$svgo"
